<resources>
    <string name="app_name">Patinfly</string>
    <string name="patinfly">Patinfly</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underscore"><u>Sign Up</u></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="dni">DNI</string>
    <string name="phone_number">Phone Number</string>
    <string name="pantifly_icon_content_description">Patinfly icon</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Patinfly</string>
    <string name="nav_header_subtitle">patinfly@google.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Side Menu Strings -->
    <string name="history">History</string>
    <string name="scooters">Scooters</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

    <!-- Settings Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>
    <string name="title_activity_help_bottom_navigation">HelpBottomNavigation</string>
    <string name="title_home">Home</string>

    <!-- Help -->
    <string name="help">Help</string>
    <string name="help_description1">To rent a scooter tap</string>
    <string name="leftleft"><![CDATA[<<]]></string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="rightright"><![CDATA[>>]]></string>
    <string name="scooter_id">Scooter id:</string>
    <string name="battery">Battery:</string>
    <string name="rent">Rent</string>
    <string name="distance_traveled">Distance Traveled:</string>
    <string name="last_mantenaince">Last Mantenaince:</string>
    <string name="location">Location:</string>
    <string name="_66_km">66 km</string>
    <string name="_05_08_2021">05 08 2021</string>
    <string name="_41_1189_n">41.1189º N</string>
    <string name="_1_2445_e">1.2445º E</string>
    <string name="_0001">0001</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="returntext">Return</string>
    <string name="introduce_the_following_code_to_unlock">Introduce the following code to unlock:</string>
    <string name="dash">-</string>
    <string name="battery_low">Battery low</string>
    <string name="name2">Name:</string>
    <string name="uuid2">UUID:</string>
    <string name="location2">Location:</string>
    <string name="distance2">Distance:</string>
    <string name="last_maintenance2">Last maintenance:</string>

    <string name="preference_file_key">app_dict_shared_preference</string>
    <string name="preference_key_login_email">STORED_LOGIN_EMAIL</string>
    <string name="preference_key_login_uuid">STORED_LOGIN_UUID</string>
    <string name="would_you_like_to_see_the_tutorial">Would you like to see the tutorial?</string>
    <string name="yes">Yes</string>
    <string name="no_don_t_ask_again">No, don\'t ask again</string>
    <string name="tutorial">Tutorial</string>
    <string name="finish_tutorial">Finish Tutorial</string>
    <string name="john">John</string>
    <string name="_644315099">644315099</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="doe">Doe</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="edit_parameters">Edit Parameters</string>
    <string name="save_parameters">Save Parameters</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="password_changed_correctly">Password changed correctly.</string>
    <string name="wrong_parameters">Wrong Parameters</string>
    <string name="introduce_same">Introduce the same password</string>
    <string name="loading_rent_status">Loading rent status...</string>
    <string name="rent_was_started_succesfully">Rent was started successfully.</string>
    <string name="click_the_button_when_you_are_done">Click the button when you are done.</string>
    <string name="stop_rent">Stop Rent</string>

</resources>