<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/baseline_electric_scooter_24"
            android:title="@string/scooters" />
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/history" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/helpFragment"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help" />

    </group>
</menu>