<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorial_inner_layout"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tutorial_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/would_you_like_to_see_the_tutorial"
            android:textColor="@color/color_text_on_s"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tutorial_yes_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tutorial_yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_secondary_dark"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tutorial_no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_secondary_light"
            android:text="@string/no_don_t_ask_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial_yes_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tutorial_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/tutorial"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tutorial_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tutorial_picture"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:maxHeight="100dp"
        android:src="@drawable/help_image1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TableRow
        android:id="@+id/tutorial_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_picture"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/tutorial_leftleft"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/leftleft"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/tutorial_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/left"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/tutorial_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/right"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/tutorial_rightright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"
            android:text="@string/rightright"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>

    <Button
        android:id="@+id/tutorial_finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_tutorial"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tutorial_table"
        app:layout_constraintEnd_toEndOf="@+id/tutorial_table" />

</androidx.constraintlayout.widget.ConstraintLayout>